--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta property="og:tile" content="스타일산다_한승우">
+    <meta property="og:description" content="가상사이트만듬">
+    <meta property="og:image" content="images/visul.png">
 </head>
 
 <body>
