--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="스타일산다_한승우">
     <meta property="og:description" content="가상사이트만듬">
-    <meta property="og:image" content="images/visul.png">
+    <meta property="og:image" content=" https://ksw2753.github.io/sanda/images/visul.png">
     <title>Style_sanda</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
